real-world/realworld-ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: realworld
  labels:
    name: realworld
# kubectl apply -f realworld-ns.yml
