real-world/realworld-client-deploy.yml
# Application to deploy
# kubectl apply -f realworld-client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-client
  namespace: realworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realworld-client
  template:
    metadata:
      labels:
        app: realworld-client
        tier: frontend
        track: stable
        service: realworld-client
    spec:
      containers:
      - name: realworld-client
        image: juanchojbarroso/realworld-client
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 4100
