real-world/realworld-server-deploy.yml
# Application to deploy
# kubectl apply -f realworld-server-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-server
  namespace: realworld
spec:
  replicas: 4
  selector:
    matchLabels:
      app: realworld-server
  template:
    metadata:
      labels:
        app: realworld-server
        tier: backend
        track: stable
        service: realworld-server
    spec:
      containers:
      - name: realworld-server
        image: juanchojbarroso/realworld-server
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 384Mi
