real-world/realworld-client-svc.yml
# Service to expose frontend
# kubectl apply -f realworld-client-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: realworld-client
  namespace: realworld
  labels:
    app: realworld-client
    tier: frontend
spec:
  ports:
  - protocol: TCP
    port: 4100
    targetPort: 4100
  selector:
    app: realworld-client
    tier: frontend
