real-world/realworld-ingress-gke.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-ingress
  namespace: realworld
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "34.138.119.108.nip.io"
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: realworld-client
            port:
              number: 4100
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: realworld-server
            port:
              number: 3000
