real-world/realworld-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-ingress
  namespace: realworld
spec:
  rules:
  - host: realworld.dev
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: realworld-client
            port:
              number: 3000
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: realworld-server
            port:
              number: 8000
